--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ repositories {
 	}
 }
 
+test {
+    testLogging.showStandardStreams = true
+}
+
 dependencies {
 	testCompile 'junit:junit:4.12'
 	testCompile 'org.mockito:mockito-core:2.0.62-beta'
