--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
 
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
@@ -22,14 +24,14 @@ dependencies {
 	testCompile 'junit:junit:4.12'
 	testCompile 'org.mockito:mockito-core:2.0.62-beta'
 
-	compile 'com.github.scm4j:scm4j-vcs-git:master-SNAPSHOT'
-	compile 'com.github.scm4j:scm4j-vcs-svn:master-SNAPSHOT'
+	compile 'com.github.scm4j:scm4j-vcs-git:+'
+	compile 'com.github.scm4j:scm4j-vcs-svn:+'
 	
 	compile 'com.google.code.gson:gson:2.8.0'
+	compile 'com.google.guava:guava:20.0'
+	
 	//compile 'org.apache.maven.resolver:maven-resolver:1.0.3'
 	//compile 'io.tesla.maven:maven-aether-provider:3.1.2'
-	compile 'org.apache.commons:commons-io:1.3.2'
-	
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
