--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
 	compile 'com.github.scm4j:scm4j-vcs-git:master-SNAPSHOT'
 	compile 'com.github.scm4j:scm4j-vcs-svn:master-SNAPSHOT'
+	compile 'com.github.scm4j:scm4j-commons:master-SNAPSHOT'
 	
 	compile 'com.google.code.gson:gson:2.8.0'
 	compile 'com.google.guava:guava:20.0'
