--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,9 @@ group = 'org.scm4j'
 version = '1.0-SNAPSHOT'
 
 repositories {
+	maven { url "https://maven.atlassian.com/3rdparty/" }
+	maven { url "https://jitpack.io" }
 	mavenCentral()
-	maven { 
-		url "https://jitpack.io" 
-	}
 }
 
 test {
