--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	
 	compile 'com.google.code.gson:gson:2.8.0'
 	compile 'com.google.guava:guava:20.0'
+
+	compile 'org.yaml:snakeyaml:1.18'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
