--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	testCompile 'org.powermock:powermock-mockito-release-full:1.6.3'
 	testCompile 'org.powermock:powermock-api-mockito:1.6.3'
 
+	compile 'com.github.scm4j:scm4j-vcs-api:master-SNAPSHOT'
 	compile 'com.github.scm4j:scm4j-vcs-git:master-SNAPSHOT'
 	compile 'com.github.scm4j:scm4j-vcs-svn:master-SNAPSHOT'
 	compile 'com.github.scm4j:scm4j-commons:master-SNAPSHOT'
