--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+plugins {
+	id 'jacoco'
+	id 'com.github.kt3k.coveralls' version '2.8.1'
+}
+
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'eclipse'
@@ -8,6 +13,13 @@ targetCompatibility = JavaVersion.VERSION_1_7
 
 group = 'org.scm4j'
 version = '1.0-SNAPSHOT'
+
+jacocoTestReport {
+	reports {
+		xml.enabled = true // coveralls plugin depends on xml format report
+		html.enabled = true
+	}
+}
 
 repositories {
 	maven { url "https://jitpack.io" }
