--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
 group = 'org.scm4j'
-version = '1.0-SNAPSHOT'
+version = file('version').text.trim()
 
 jacocoTestReport {
 	reports {
