--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,12 @@ dependencies {
 	testCompile 'org.powermock:powermock-mockito-release-full:1.6.3'
 	testCompile 'org.powermock:powermock-api-mockito:1.6.3'
 	testCompile 'nl.jqno.equalsverifier:equalsverifier:2.3'
+	testCompile 'org.hamcrest:hamcrest-all:1.3'
+	
 
-	compile 'com.github.scm4j:scm4j-vcs-git:develop-SNAPSHOT'
-	compile 'com.github.scm4j:scm4j-vcs-svn:develop-SNAPSHOT'
-	compile 'com.github.scm4j:scm4j-commons:develop-SNAPSHOT'
+	compile 'com.github.scm4j:scm4j-vcs-git:master-SNAPSHOT'
+	compile 'com.github.scm4j:scm4j-vcs-svn:master-SNAPSHOT'
+	compile 'com.github.scm4j:scm4j-commons:master-SNAPSHOT'
 	compile 'com.google.guava:guava:20.0'
 	compile 'org.yaml:snakeyaml:1.18'
 	compile 'ch.qos.logback:logback-classic:1.2.3'
