--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ cache:
     - $HOME/.gradle/wrapper/
 after_success:
   - ./gradlew jacocoTestReport coveralls
-script: ./gradlew build --info
+script: ./gradlew build --stacktrace
