--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ dependencies {
 	compile 'com.github.scm4j:scm4j-commons:master-SNAPSHOT'
 	compile 'com.google.guava:guava:20.0'
 	compile 'org.yaml:snakeyaml:1.18'
-	compile 'ch.qos.logback:logback-classic:1.2.3'
+	compile 'org.slf4j:slf4j-simple:1.7.21'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
