--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@
 *.war
 *.ear
 
+# Intellij project files
+*.wps
+*.ipr
+*.iws
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /.*
