--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,13 @@ test {
 }
 
 dependencies {
+	// load managed dependencies
+	def s = '[ \t]*', w = '[^:#@]+?'
+	(file('mdeps').text =~ /(?m)^$s($w):($w):($w)?(:$w)?(@$w)?$s(?:#$s($w)?$s)?$/).each {
+			match, group, name, version, classifier, ext, configuration ->
+		add(configuration ?: name.contains('test') ? 'testCompile' : 'compile', "$group:$name:${version?:''}${classifier?:''}${ext?:''}")
+	}
+
 	testCompile 'junit:junit:4.12'
 	testCompile 'org.mockito:mockito-all:1.9.5'
 	testCompile 'org.powermock:powermock-mockito-release-full:1.6.3'
@@ -43,10 +50,6 @@ dependencies {
 	testCompile 'nl.jqno.equalsverifier:equalsverifier:2.3'
 	testCompile 'org.hamcrest:hamcrest-all:1.3'
 
-
-	compile 'com.github.scm4j:scm4j-vcs-git:master-SNAPSHOT'
-	compile 'com.github.scm4j:scm4j-vcs-svn:master-SNAPSHOT'
-	compile 'com.github.scm4j:scm4j-commons:master-SNAPSHOT'
 	compile 'com.google.guava:guava:20.0'
 	compile 'org.yaml:snakeyaml:1.18'
 	compile 'org.slf4j:slf4j-simple:1.7.21'
