--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 	testCompile 'org.mockito:mockito-all:1.9.5'
 	testCompile 'org.powermock:powermock-mockito-release-full:1.6.3'
 	testCompile 'org.powermock:powermock-api-mockito:1.6.3'
+	testCompile 'org.powermock:powermock-module-junit4-rule-agent:1.6.3'
 	testCompile 'nl.jqno.equalsverifier:equalsverifier:2.3'
 	testCompile 'org.hamcrest:hamcrest-all:1.3'
 
