gradle tests failures detail level is changed to "full" Fixed working with patches. Now if exact product version is provided then patch versions will be used for it and all mdeps, not new releases. fixed typo in vcs-repos file structure: releaseBanchPrefix -> releaseBranchPrefix minor fixes, refactorings

--- a/src/test/resources/org/scm4j/wf/conf/urls-omap.yml
+++ b/src/test/resources/org/scm4j/wf/conf/urls-omap.yml
@@ -4,7 +4,7 @@
 - my(.*):
     url: http://localhost/git/myProj$1
     type: git
-    releaseBanchPrefix: B
+    releaseBranchPrefix: B
     devBranch: null
 - ~:
     url: https://github.com/qwerty/$0
