--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,11 @@
 plugins {
+	id 'java'
+	id 'maven'
+	id 'eclipse'
+	id 'idea'
 	id 'jacoco'
 	id 'com.github.kt3k.coveralls' version '2.8.1'
 }
-
-apply plugin: 'java'
-apply plugin: 'maven'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
 
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
@@ -22,7 +21,10 @@ jacocoTestReport {
 }
 
 configurations.all {
-    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+	resolutionStrategy {
+		cacheDynamicVersionsFor 0, 'seconds'
+		cacheChangingModulesFor 0, 'seconds'
+	}
 }
 
 repositories {
@@ -55,6 +57,15 @@ dependencies {
 	compile 'com.google.guava:guava:20.0'
 	compile 'org.yaml:snakeyaml:1.18'
 	compile 'org.slf4j:slf4j-simple:1.7.21'
+}
+
+jar {
+	manifest.attributes (
+			'Specification-Title': project.name,
+			'Specification-Version': version,
+			'Implementation-Title': project.name,
+			'Implementation-Version': "$version (${new Date().format('yyyy-MM-dd')})",
+	)
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
