--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ dependencies {
 
 	testCompile 'com.github.stefanbirkner:system-rules:1.16.1'
 	testCompile 'junit:junit:4.12'
-	testCompile 'org.mockito:mockito-all:1.9.5'
+	testCompile 'org.mockito:mockito-core:2.0.62-beta'
 	testCompile 'nl.jqno.equalsverifier:equalsverifier:2.3'
 	testCompile 'org.hamcrest:hamcrest-all:1.3'
 
