Build command shoud not avoid FORK-FREEZE #15

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,8 @@ dependencies {
 	compile 'com.google.guava:guava:20.0'
 	compile 'org.yaml:snakeyaml:1.18'
 	compile 'org.slf4j:slf4j-simple:1.7.21'
+	
+	compile 'org.projectlombok:lombok:1.16.18'
 }
 
 jar {
