--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,8 @@ dependencies {
 	testCompile 'org.mockito:mockito-core:2.0.62-beta'
 	testCompile 'nl.jqno.equalsverifier:equalsverifier:2.3'
 	testCompile 'org.hamcrest:hamcrest-all:1.3'
+	testCompile 'com.github.almondtools:conmatch:0.1.13'
+	
 
 	compile 'com.google.guava:guava:23.0'
 	compile 'org.yaml:snakeyaml:1.18'
