--- a/build.gradle
+++ b/build.gradle
@@ -90,8 +90,12 @@ task fatJar(type: Jar) {
 			'Implementation-Version': "$version (${new Date().format('yyyy-MM-dd')})",
 	)
     baseName = 'fat-' + project.name
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
+    from { configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) } }
+	{
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+    }
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
