--- a/build.gradle
+++ b/build.gradle
@@ -90,12 +90,8 @@ task fatJar(type: Jar) {
 			'Implementation-Version': "$version (${new Date().format('yyyy-MM-dd')})",
 	)
     baseName = 'fat-' + project.name
-    from { configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) } }
-	{
-        exclude "META-INF/*.SF"
-        exclude "META-INF/*.DSA"
-        exclude "META-INF/*.RSA"
-    }
+    from { sourceSets.main.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+    exclude "META-INF/*.SF", "META-INF/*.DSA", "META-INF/*.RSA"
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
