--- a/src/main/resources/org/scm4j/releaser/cli/config-templates/credentials.yml
+++ b/src/main/resources/org/scm4j/releaser/cli/config-templates/credentials.yml
@@ -1,14 +1,8 @@
-# This yaml file contains credentials for vcs repositories used by components
-# Credentials of the first regex entry which matches the repository url will be used. 
-# If no matches then `~` credentials will be used 
-# 
-#- https://my.company/internal.(.*):
-#  name: internalRepoUser
-#  password: internalPass
-#- https://my.company.(.*):
-#  name: publicRepoUser
-#- https://(.*) # one password for all urls which has no password specified above and started with https://
-#  password: commonPass
-#- ~: # used if url matches none of above
-#  name: defaultUser
-#  password: defaultPass
+#
+# This file maps urls to credentials
+#
+
+#https?://github\.com/.*:
+#  name: user@mail
+#  password: 76adg09g98dac89f9a0c
+
