Show error messages with red color #41

--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,7 @@ dependencies {
 	compile 'com.google.guava:guava:23.0'
 	compile 'org.yaml:snakeyaml:1.18'
 	compile 'org.slf4j:slf4j-simple:1.7.21'
+	compile 'com.diogonunes:JCDP:2.0.3.1'
 	compileOnly 'org.projectlombok:lombok:1.16.18'
 }
 
