--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,13 @@ plugins {
 	id 'idea'
 	id 'jacoco'
 	id 'com.github.kt3k.coveralls' version '2.8.1'
+	id 'org.scm4j.releaser.scm4j-releaser-gradle-plugin' version '0.2.0'
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 group = 'org.scm4j'
-version = file('version').text.trim()
 
 sourceSets {
 	inv {
@@ -49,13 +49,6 @@ test {
 }
 
 dependencies {
-	// load managed dependencies
-	def s = '[ \t]*', w = '[^:#@]+?'
-	(file('mdeps').text =~ /(?m)^$s($w):($w):($w)?(:$w)?(@$w)?$s(?:#$s($w)?$s)?$/).each {
-			match, group, name, version, classifier, ext, configuration ->
-		add(configuration ?: name.contains('test') ? 'testCompile' : 'compile', "$group:$name:${version?:''}${classifier?:''}${ext?:''}", { changing = true })
-	}
-
 	testCompile 'com.github.stefanbirkner:system-rules:1.16.1'
 	testCompile 'junit:junit:4.12'
 	testCompile 'org.mockito:mockito-core:2.0.62-beta'
